--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,7 @@
 
 <footer class="footer">
   <section class="footer__logo logo logo--smaller">Moowle</section>
-  <section class="footer__statistics">
-    <p>130&thinsp;291 movies inside</p>
-  </section>
+  <section class="footer__statistics"><p></p></section>
 </footer>
 <script src="bundle.js"></script>
 </body>
